# algorithm-visualiser

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/Bar/: bar.hpp
include/Window/: window.hpp
lib/: libsfml-audio.2.6.2.dylib  libsfml-graphics.2.6.2.dylib  libsfml-network.2.6.2.dylib  libsfml-window.2.6.2.dylib
lib/pkgconfig/: sfml-audio.pc  sfml-window.pc
src/Bar/: bar.cpp
src/Window/: window.cpp
